# mcEvol

./: .gitignore  CMakeLists.txt  Makefile  README.md  installYODA.sh  myTMD  setup.sh
farm/: copy.sh  jobs.submit  mcEvol.run  mcEvol.submit  runscript.sh  sub.sh
helpers/: plotters.cpp
inc/: Spline.h  SplineGen.h  Splittings.h  SplittingsIntegralSpline.h  Sudakov.h  Vec2.h  Vec3.h  alphaSpline.h  integration.h  sudakovSpline.h  sudakovSplineSingle.h  tmd.h
qcdnum/: .vimrc  Makefile  a.out  discTab  ome.f  pij_nlo.f  qcdnum  qcdnum.f  qcdnumTabNLOold.txt  qconst.inc  wgplg.f  xpij2p.f  xpns2p.f
src/: Spline.cpp  SplineGen.cpp  Splittings.cpp  SplittingsLO.cpp  SplittingsNLO.cpp  SplittingsNNLO.cpp  Sudakov.cpp  alphaSpline.cpp  integration.cpp  main.cpp  sudakovSpline.cpp  sudakovSplineSingle.cpp  tmd.cpp
